--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,11 @@ dependencies = [
     "openpyxl>=3.1.5",    
     "ephem>=4.2",    
     "tabulate>=0.9.0",
-    "scikit-optimize>=0.10.2"
+    "scikit-optimize>=0.10.2",
+    "polars>=1.30.0",
+    "great_tables>=0.17.0",
+    "formulae>=0.5.4",
+    "cython>=3.1.1"
     ]
     
     
@@ -46,12 +50,12 @@ dev = ["pytest>=7.0.0",
     "mypy>=1.0.0",
 ]
 r = [
-    "pymer4>=0.8.2",
+    "pymer4>=0.7.3",
     "rpy2>=3.5.13",
 ]
 [tool.hatch.metadata]
 requires-external = [
-    "R >= 4.4.1",
+    "R >= 4.4.3",
 ]
 
 [tool.hatch.build.targets.wheel]
