--- a/config/RB_22_config.yaml
+++ b/config/RB_22_config.yaml
@@ -111,9 +111,10 @@ labels:
     - "Mineral"
 
 analysis:
-  mode: "LOOCV"     # Do LOOCV on the target dataset.
-  # mode: "PRODUCT"   # predict activity labels for a full dataset
+  # mode: "LOOCV"     # Do LOOCV on the target dataset.
+  mode: "PRODUCT"   # predict activity labels for a full dataset
   target_dataset: "data/processed/RB_22/all_cows_labeled.csv"  # Required The dataset to make predictions on
+  # target_dataset: "data/predictions/RB_22_Partial_probs/HMM/predictions.csv"  # Required The dataset to make predictions on
   # training_info_path: "data/analysis_results/hmm/FinalModels/RB_22_Paper_Model/trained_model.rds" # No CV, no filter cows, no covariate.
 
 
@@ -123,6 +124,9 @@ analysis:
   cv_results: "data/cv_results/RB_22"
   models: "data/models/RB_22"
   predictions: "data/predictions/RB_22"
+  # cv_results: "data/cv_results/RB_22_Partial_probs"
+  # models: "data/models/RB_22_Partial_probs"
+  # predictions: "data/predictions/RB_22_Partial_probs"
 
 
   day_only: false
@@ -187,7 +191,7 @@ analysis:
   lstm:
     enabled: true
     
-    ops: false
+    ops: true
 
 
     # random,
@@ -204,7 +208,7 @@ analysis:
     ################ Warning these two will SIGNIFICANTLY increase runtime to find parameters 
     # BAYESIAN Optimization
     bayes_opt: false                # Whether to use Bayesian optimization
-    bayes_opt_n_calls: 50          # Number of evaluations to perform
+    bayes_opt_n_calls: 40          # Number of evaluations to perform
     bayes_opt_resume: true         # Whether to resume from previous optimization
     bayes_opt_fast_eval: true      # Use faster evaluation during optimization
 
@@ -224,6 +228,9 @@ analysis:
       - "angle"
       - "magnitude_mean"
       - "magnitude_var"
+      # - "prob_Grazing"
+      # - "prob_Resting"
+      # - "prob_Traveling"
       # - x_mean
       # - y_mean
       # - z_mean
@@ -243,14 +250,14 @@ analysis:
     cows_per_cv_fold: 1
 
     ################### OPO BO Paper parameters
-    max_length: 122
-    batch_size: 32
-    initial_lr: 0.011718033546672266
-    decay_steps: 1667
-    decay_rate: 0.13881146613297657
-    clipnorm: 1.5
-    lstm_size: 16
-    dense_size: 64
+    # max_length: 122
+    # batch_size: 32
+    # initial_lr: 0.011718033546672266
+    # decay_steps: 1667
+    # decay_rate: 0.13881146613297657
+    # clipnorm: 1.5
+    # lstm_size: 16
+    # dense_size: 64
     # ===== OVERALL RESULTS =====
     # Total accuracy: 0.9418
     # Grazing accuracy: 0.9901 (n=203)
@@ -263,19 +270,20 @@ analysis:
 
 
     ################### OPS BO Paper parameters
-    max_length: 249
-    batch_size: 29
-    initial_lr: 0.026919380886896802
-    decay_steps: 1836
-    decay_rate: 0.1967454052505094
-    clipnorm: 1.3541014490322514
-    lstm_size: 16
-    dense_size: 8
+    max_length: 60
+    batch_size: 23
+    initial_lr: 0.02311057660082321
+    decay_steps: 3000
+    decay_rate: 0.33398247654454205
+    clipnorm: 1.4338006690993144
+    lstm_size: 8
+    dense_size: 16
     # ===== OVERALL RESULTS =====
-    # Total accuracy: 0.9584
-    # Grazing accuracy: 0.9655 (n=203)
-    # Resting accuracy: 0.9569 (n=232)
-    # Traveling accuracy: 0.9348 (n=46)
+    # Total accuracy: 0.9459
+    # Grazing accuracy: 0.9704 (n=203)
+    # Resting accuracy: 0.9353 (n=232)
+    # Traveling accuracy: 0.8913 (n=46)
+
 
 
     patience: 15
